introduce default module view

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>...</title>
-	<script type="text/javascript" src="core/kodok.js"></script>
+	<script type="text/javascript" src="core/kodok.js" data-environment="development"></script>
+    <style type="text/css">
+        .header { height: 50px; background-color: black; }
+    </style>
 </head>
 <body>
-
-
+    <div class="header"></div>
+    <div class="container"></div>
+    <div class="footer"></div>
 </body>
 </html>
