--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>...</title>
-	<script type="text/javascript" src="core/kodok.js" data-environment="development"></script>
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="vendor/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+
     <style type="text/css">
-        .header { height: 50px; background-color: black; }
+        body > .container {
+            margin-top: 41px;
+            padding: 20px;
+        }
+
+        .table-container {
+            overflow: auto;
+        }
     </style>
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="brand" href="#!/">Kodok</a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav">
+                            <li><a href="#!/user/entries">User</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container"></div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="container">
+            <hr/>
+            Copyright Kodok @ 2013
+        </div>
+    </div>
+	<script type="text/javascript" src="core/kodok.js" data-environment="development"></script>
 </body>
 </html>
